[gd_scene load_steps=2 format=2]

[ext_resource path="res://Panels/Instantiables/ActiveJobPanel.gd" type="Script" id=1]

[node name="ActiveJobPanel" type="PanelContainer"]
margin_right = 386.0
margin_bottom = 72.0
script = ExtResource( 1 )

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 379.0
margin_bottom = 65.0
mouse_filter = 2

[node name="HBC1" type="HBoxContainer" parent="VBC"]
margin_right = 372.0
margin_bottom = 14.0
mouse_filter = 2

[node name="NameLabel" type="Label" parent="VBC/HBC1"]
margin_right = 159.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Job Name"

[node name="TimeLabel" type="Label" parent="VBC/HBC1"]
margin_left = 163.0
margin_right = 208.0
margin_bottom = 14.0
text = "0.0/8.0"
align = 2

[node name="TimeBar" type="ProgressBar" parent="VBC/HBC1"]
margin_left = 212.0
margin_right = 372.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 1
percent_visible = false

[node name="HBC2" type="HBoxContainer" parent="VBC"]
margin_top = 18.0
margin_right = 372.0
margin_bottom = 32.0
mouse_filter = 2
alignment = 1

[node name="RewardLabel" type="Label" parent="VBC/HBC2"]
margin_left = 111.0
margin_right = 261.0
margin_bottom = 14.0
text = "+$1.00 and +3 Balloons"

[node name="HS" type="HSeparator" parent="VBC"]
margin_top = 36.0
margin_right = 372.0
margin_bottom = 40.0
mouse_filter = 2

[node name="DescriptionLabel" type="Label" parent="VBC"]
margin_top = 44.0
margin_right = 372.0
margin_bottom = 58.0
text = "Job Description"
autowrap = true
[connection signal="mouse_entered" from="." to="." method="_on_JobPanel_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_JobPanel_mouse_exited"]
